tests/baselines/reference/bigIntWithTargetES3.errors.txt
tests/cases/compiler/bigIntWithTargetES3.ts(5,22): error TS2737: BigInt literals are not available when targeting lower than ES2020.
tests/cases/compiler/bigIntWithTargetES3.ts(5,29): error TS2737: BigInt literals are not available when targeting lower than ES2020.
tests/cases/compiler/bigIntWithTargetES3.ts(5,39): error TS2737: BigInt literals are not available when targeting lower than ES2020.
tests/cases/compiler/bigIntWithTargetES3.ts(5,48): error TS2737: BigInt literals are not available when targeting lower than ES2020.


==== tests/cases/compiler/bigIntWithTargetES3.ts (4 errors) ====
    const normalNumber = 123; // should not error
    let bigintType: bigint; // should not error
    let bigintLiteralType: 123n; // should not error when used as type
    let bigintNegativeLiteralType: -123n; // should not error when used as type
    const bigintNumber = 123n * 0b1111n + 0o444n * 0x7fn; // each literal should error
                         ~~~~
!!! error TS2737: BigInt literals are not available when targeting lower than ES2020.
                                ~~~~~~~
!!! error TS2737: BigInt literals are not available when targeting lower than ES2020.
                                          ~~~~~~
!!! error TS2737: BigInt literals are not available when targeting lower than ES2020.
                                                   ~~~~~
!!! error TS2737: BigInt literals are not available when targeting lower than ES2020.
    